# Dotfiles

./: .gitattributes  .gitignore  .gitmodules  Brewfile  Brewfile.lock.json  Cargofile  Makefile  Npmfile  Pipxfile  README.md  global_gitignore  response.json  set.sh
alacritty/: alacritty.yml
alacritty/themes/: cyberpunk-neon.yml
bash/: bashrc
cbfl/: color  mutex  path  pipe
configurations/: vimspector.json
configurations/alacritty/: alacritty.yml
dev_tunnel/: run.sh
global-pip/: pyproject.toml
launchd/: link_daemons.sh
mutt/: account.com.gmail.username__template  colors.muttrc  mailcap  muttrc  vim-keys.rc
mutt_template/: account.com.gmail.username__template  vim-keys.rc  watch_new_mail.sh
navi/: brew.cheat  docker.cheat  entr.cheat  imagemagick.cheat  navi  ssh.cheat  yabai.cheat
newsboat/: config  urls
newsboat/scripts/: summarize_rss  (+1 more)
nvim/: init.lua  init.vim  lazy-lock.json
radare2/: radare2rc
scripts/: bg_jobs_count  check_popup_running  check_something_running  color_test  cpopup-tmux  credential_manager  docker-remote  gits  gitstat  hover_cover  hpopup-tmux  initvenv  is_shell  popup-tmux  popup-tmux-sh  popup-wtfutil  print_calendar  proclist  pysen-format  reminders_wrap  remotedocker  rfv  run_workhour  send-cmd-to-popup  services_status  shorten-pwd  shorten-string  things_create  things_wrap  tm  tm-cmd-session  tmux_status_left  tmux_status_right  z
shortcuts/: GenerateCalendar.shortcut
taskwarrior/: taskrc
tmux/: tmux.conf
zellij/: config.kdl
zsh/: bootup_script.sh  dotenv.sample  session_script.sh  zprofile  zshrc
(+187 files in other folders)
