[tool.poetry]
name = "globalpip"
version = "0.1.0"
description = ""
authors = ["Ja-sonYun <killa30867@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
neovim = "^0.3.1"
debugpy = "^1.6.6"
toml = "^0.10.2"
textual = "^0.17.2"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
